Fix memory line number mapping issues
- Rebuild lineNumbersToContent map in both create and insert methods
- Add proper null checks for path validation
- Fix split logic to avoid empty elements
- Add HashMap import for Map implementation

Tests now get correct line counts in insertion operations